--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+// Import Google Font 'Inter'
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 // Import SCSS partials
 @import "variables";
 @import "mixins";
